# loudcheck

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PRD.md  README.md  pyproject.toml  server.json  tool.json
.github/workflows/: test.yml
loudcheck/: __init__.py  analyze.py  cli.py  mcp_server.py  standards.py  tool.json  verdict.py
tests/: test_loudcheck.py  test_verdict_contract.py
